--- a/libraries/TGRSIRootIO/makefile
+++ b/libraries/TGRSIRootIO/makefile
@@ -44,7 +44,7 @@ libGRSIRootIO.so: $(OBJECTS)
 
 %Dict.cxx: $(BASE)/include/%.h
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint $@ -c $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c $^ 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
