I was bored so I made some makefile updates

--- a/libraries/TGRSIRootIO/makefile
+++ b/libraries/TGRSIRootIO/makefile
@@ -11,6 +11,8 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libGRSIRootIO.so
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
+
 
 libGRSIRootIO.so: $(OBJECTS)
 	@printf " ${COM_COLOR}%s${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) "$@"
