--- a/libraries/TGRSIint/makefile
+++ b/libraries/TGRSIint/makefile
@@ -12,6 +12,8 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libTGRSIint.so
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
+
 
 #ifndef __APPLE__
 WORDS = words.o
