--- a/libraries/TGint/makefile
+++ b/libraries/TGint/makefile
@@ -11,6 +11,8 @@ CAT=cat
 .PHONY: all clean gone
 
 all: libTGint.so
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
+
 
 libTGint.so: $(OBJECTS)
 	@$(ECHO) $(COMP_STRING)
