tweaks for apple

--- a/libraries/TGRSIAnalysis/TSharc/makefile
+++ b/libraries/TGRSIAnalysis/TSharc/makefile
@@ -10,6 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
+ifdef(__LINUX__)
 all: libSharc.so
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
@@ -28,6 +29,33 @@ libSharc.so: $(OBJECTS)
 		fi;
 	@$(RM) -f temp.errors temp.log
 	@cp $@ ../..
+
+
+endif
+
+ifdef(__APPLE__)
+all: libSharc.dylib
+	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
+
+%.dylib: $(OBJECTS)
+	@printf " ${COM_COLOR}%s${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) "$@"
+	@$(COMPILESHARED)$@ $(CFLAGS) -o$@ $(OBJECTS) 2> temp.log || touch temp.errors
+	@if test -e temp.errors; then \
+		printf "\r ${COM_COLOR}%s${OBJ_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
+		&& $(CAT) temp.log && \
+		printf "${ERROR_COLOR}%s\n${NO_COLOR}" ${PWD};  \
+		elif test -s temp.log; then \
+		printf "\r ${COM_COLOR}%s${OBJ_COLOR}%-30s ${WARN_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(WARN_STRING) \
+		&& $(CAT) temp.log; \
+		else printf "\r ${COM_COLOR}%s${OBJ_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10  $(OK_STRING); \
+		fi;
+	@$(RM) -f temp.errors temp.log
+	@cp $@ ../..
+
+endif
+
+
+
 
 %.o: %.cxx
 	@printf " ${COM_COLOR}%s ${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@ 
