--- a/libraries/TGRSIAnalysis/TBetaDecay/makefile
+++ b/libraries/TGRSIAnalysis/TBetaDecay/makefile
@@ -13,7 +13,7 @@ CAT=cat
 all: libBetaDecay.so
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
-%.so: $(OBJECTS)
+libBetaDecay.so: $(OBJECTS)
 	@printf " ${COM_COLOR}%s${OBJ_COLOR}%s${NO_COLOR}" $(COMP_STRING) "$@"
 	@$(COMPILESHARED)$@ $(CFLAGS) -o$@ $(OBJECTS) 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
