--- a/src/makefile
+++ b/src/makefile
@@ -35,6 +35,7 @@ LIBS += -lAnalysisTreeBuilder
 LIBS += -lGRSIFormat
 LIBS += -lNucleus
 LIBS += -lKinematics
+LIBS += -lSRIM
 
 DETLIBS =  -lTigress
 DETLIBS += -lSharc
