--- a/libraries/TGRSIAnalysis/TSceptar/makefile
+++ b/libraries/TGRSIAnalysis/TSceptar/makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = TGriffin.o TGriffinDict.o TGriffinData.o TGriffinDataDict.o TGriffinHit.o TGriffinHitDict.o 
+OBJECTS = TSceptar.o TSceptarDict.o TSceptarData.o TSceptarDataDict.o TSceptarHit.o TSceptarHitDict.o 
 
 CFLAGS += -fPIC
 
@@ -10,7 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libGriffin.so
+all: libSceptar.so
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
