--- a/src/makefile
+++ b/src/makefile
@@ -47,7 +47,7 @@ DETLIBS += -lCSM
 #DETLIBS += -lTip
 
 DETLIBS += -lGriffin
-#DETLIBS += -lSceptar
+DETLIBS += -lSceptar
 #DETLIBS += -lPaces
 #DETLIBS += -lDante
 #DETLIBS += -lZeroDegree
