--- a/.grsirc
+++ b/.grsirc
@@ -1,3 +1,4 @@
+Unix.*.Root.MacroPath: .:$(GRSISYS)/util:$(ROOTSYS)/macros
 
 
 
@@ -8,6 +9,7 @@
 #files to load at log in:
 Rint.Logon: $(GRSISYS)/.grsi_logon
 Rint.History $(GRSISYS)/.grsi_history
+Rint.HistSize: 1000000 
 
 #default root variables form the grsi enviorment
 Canvas.MoveOpaque: true
