Fast writing, reading breaks after approx. 2000 entries

--- a/libraries/TGRSIAnalysis/TGriffin/makefile
+++ b/libraries/TGRSIAnalysis/TGriffin/makefile
@@ -44,9 +44,9 @@ all: libGriffin.so
 	@$(RM) -f temp.errors temp.log
 
 
-%Dict.cxx: $(BASE)/include/%.h
+%Dict.cxx: $(BASE)/include/%.h %_LinkDef.h 
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint -f $@ -c $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c -I${BASE}/include -p $^ 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
@@ -63,7 +63,7 @@ all: libGriffin.so
 
 
 clean:
-	$(RM) $(OBJECTS) *~ *Dict* *so *LinkDef*
+	$(RM) $(OBJECTS) *~ *Dict* *so
 
 
 
