--- a/libraries/TGRSIFormat/makefile
+++ b/libraries/TGRSIFormat/makefile
@@ -67,8 +67,19 @@ libGRSIFormat.so: $(OBJECTS)
 		fi;
 #	@$(RM) -f temp.errors temp.log
 
-TGRSIFormatDict.cxx: $(INCDIR)/TFragment.h $(INCDIR)/TChannel.h $(INCDIR)/TFragmentQueue.h $(INCDIR)/TFragmentSelector.h $(INCDIR)/TGRSIRunInfo.h $(INCDIR)/TGRSIStats.h 
-	rootcint -f $@ -c `root-config --cflags` -p $(INCDIR)/TFragment.h $(INCDIR)/TChannel.h $(INCDIR)/TFragmentQueue.h $(INCDIR)/TFragmentSelector.h $(INCDIR)/TGRSIRunInfo.h $(INCDIR)/TGRSIStats.h TGRSIFormatLinkDef.h 
+TGRSIFormatDict.cxx: $(INCDIR)/TFragment.h $(INCDIR)/TChannel.h $(INCDIR)/TFragmentQueue.h $(INCDIR)/TFragmentSelector.h $(INCDIR)/TGRSIRunInfo.h $(INCDIR)/TGRSIStats.h
+	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
+	@rootcint -f $@ -c `root-config --cflags` -p $(INCDIR)/TFragment.h $(INCDIR)/TChannel.h $(INCDIR)/TFragmentQueue.h $(INCDIR)/TFragmentSelector.h $(INCDIR)/TGRSIRunInfo.h $(INCDIR)/TGRSIStats.h TGRSIFormatLinkDef.h 2> temp.log || touch temp.errors
+	@if test -e temp.errors; then \
+		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
+		&& $(CAT) temp.log && \
+		printf "${ERROR_COLOR}%s\n${NO_COLOR}" ${PWD};  \
+		elif test -s temp.log; then \
+		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${WARN_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(WARN_STRING) \
+		&& $(CAT) temp.log; \
+		else printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10  $(OK_STRING); \
+		fi;
+	@$(RM) -f temp.errors temp.log
 
 
 #TGRSIFormatDict.o:  TGRSIFormatDict.cxx
