--- a/libraries/TGRSIAnalysis/TECal/makefile
+++ b/libraries/TGRSIAnalysis/TECal/makefile
@@ -10,7 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libECal.so
+all: libTECal.so
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
