rearrangment of TGRSIfunction placement and addition of fitter library

--- a/src/makefile
+++ b/src/makefile
@@ -37,6 +37,7 @@ LIBS += -lNucleus
 LIBS += -lKinematics
 LIBS += -lSRIM
 LIBS += -lTECal
+LIBS += -lTGRSIFitter
 
 DETLIBS =  -lTigress
 DETLIBS += -lSharc
