Added descant and fixed paces

--- a/src/makefile
+++ b/src/makefile
@@ -53,7 +53,7 @@ DETLIBS += -lSceptar
 DETLIBS += -lPaces
 #DETLIBS += -lDante
 #DETLIBS += -lZeroDegree
-#DETLIBS += -lDescant
+DETLIBS += -lDescant
 DETLIBS += -lGRSIDetector
 
 SYSLIBS = #-ldl -lxml2
