Fixed LinkDefs and makefiles and removed TObjectness from TDatas

--- a/libraries/TGRSIAnalysis/TTigress/makefile
+++ b/libraries/TGRSIAnalysis/TTigress/makefile
@@ -1,5 +1,8 @@
 
-OBJECTS = TTigress.o TTigressDict.o TTigressData.o TTigressDataDict.o TTigressHit.o TTigressHitDict.o TBGOData.o TBGODataDict.o TCrystalHit.o TCrystalHitDict.o
+OBJECTS = TTigress.o TTigressData.o TTigressHit.o TBGOData.o TCrystalHit.o TTigressDict.o
+INCDIR = $(BASE)/include
+DICTOBJ = $(INCDIR)/TCrystalHit.h $(INCDIR)/TTigressHit.h $(INCDIR)/TTigress.h 
+DICTNAM = TTigress
 
 CFLAGS += -fPIC
 
@@ -43,10 +46,9 @@ all: libTigress.so
 		fi;
 	@$(RM) -f temp.errors temp.log
 
-
-%Dict.cxx: $(BASE)/include/%.h
+$(DICTNAM)Dict.cxx: $(DICTOBJ)
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint -f $@ -c $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c `root-config --cflags` -I$(INCDIR) -p $(DICTOBJ) $(DICTNAM)LinkDef.h 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
@@ -58,12 +60,8 @@ all: libTigress.so
 		fi;
 	@$(RM) -f temp.errors temp.log
 
-
-
-
-
 clean:
-	$(RM) $(OBJECTS) *~ *Dict* *so *LinkDef*
+	$(RM) $(OBJECTS) *~ *Dict* *so 
 
 
 
