--- a/libraries/TGRSIAnalysis/TPaces/makefile
+++ b/libraries/TGRSIAnalysis/TPaces/makefile
@@ -1,5 +1,8 @@
 
-OBJECTS = TPaces.o TPacesDict.o TPacesData.o TPacesDataDict.o TPacesHit.o TPacesHitDict.o 
+OBJECTS = TPaces.o TPacesData.o TPacesHit.o TPacesDict.o 
+INCDIR = $(BASE)/include
+DICTOBJ = $(INCDIR)/TPacesHit.h $(INCDIR)/TPaces.h 
+DICTNAM = TPaces
 
 CFLAGS += -fPIC
 
@@ -44,9 +47,9 @@ all: libPaces.so
 	@$(RM) -f temp.errors temp.log
 
 
-%Dict.cxx: $(BASE)/include/%.h  
+$(DICTNAM)Dict.cxx: $(DICTOBJ)
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint -f $@ -c -I${BASE}/include -p $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c `root-config --cflags` -I$(INCDIR) -p $(DICTOBJ) $(DICTNAM)LinkDef.h 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
@@ -57,10 +60,6 @@ all: libPaces.so
 		else printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10  $(OK_STRING); \
 		fi;
 	@$(RM) -f temp.errors temp.log
-
-
-
-
 
 clean:
 	$(RM) $(OBJECTS) *~ *Dict* *so
