changed makefiles and LinkDef.h files to stream vectors better, stopped copying detectors from map to branch, just copying the pointer now

--- a/libraries/TGRSIAnalysis/TGriffin/makefile
+++ b/libraries/TGRSIAnalysis/TGriffin/makefile
@@ -1,5 +1,8 @@
 
-OBJECTS = TGriffin.o TGriffinDict.o TGriffinData.o TGriffinDataDict.o TGriffinHit.o TGriffinHitDict.o 
+OBJECTS = TGriffin.o TGriffinData.o TGriffinHit.o TGriffinDict.o
+INCDIR = $(BASE)/include
+DICTOBJ = $(INCDIR)/TGriffinHit.h $(INCDIR)/TGriffin.h
+DICTNAM = TGriffin
 
 CFLAGS += -fPIC
 
@@ -44,9 +47,9 @@ all: libGriffin.so
 	@$(RM) -f temp.errors temp.log
 
 
-%Dict.cxx: $(BASE)/include/%.h  
+$(DICTNAM)Dict.cxx: $(DICTOBJ)
 	@printf " ${COM_COLOR}%s${DICT_COLOR}%s${NO_COLOR}" $(COMP_STRING) $@
-	@rootcint -f $@ -c -I${BASE}/include -p $^ 2> temp.log || touch temp.errors
+	@rootcint -f $@ -c -I$(INCDIR) -p $(DICTOBJ) $(DICTNAM)LinkDef.h 2> temp.log || touch temp.errors
 	@if test -e temp.errors; then \
 		printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${ERROR_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10 $(ERROR_STRING) \
 		&& $(CAT) temp.log && \
@@ -57,9 +60,6 @@ all: libGriffin.so
 		else printf "\r ${COM_COLOR}%s${DICT_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $@ 10  $(OK_STRING); \
 		fi;
 	@$(RM) -f temp.errors temp.log
-
-
-
 
 
 clean:
