--- a/libraries/TGRSIAnalysis/TCal/makefile
+++ b/libraries/TGRSIAnalysis/TCal/makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = TECal.o TECalDict.o 
+OBJECTS = TCal.o TCalDict.o TGainMatch.o TGainMatchDict.o
 
 CFLAGS += -fPIC
 
@@ -10,7 +10,7 @@ CAT=cat
 
 .PHONY: all clean gone
 
-all: libTECal.so
+all: libTCal.so
 	@printf "\r ${FIN_COLOR}%s${FIN_OBJ_COLOR}%-30s ${NO_COLOR}\n" $(FIN_STRING) $^ ;
 
 
