--- a/libraries/makefile
+++ b/libraries/makefile
@@ -1,4 +1,4 @@
-SUBDIRS = TGRSIint TMidas TDataParser TGRSILoop TGRSIFormat TGRSIRootIO TGRSIAnalysis  #TGRSIServer 
+SUBDIRS = TGRSIint TMidas TDataParser TGRSILoop TGRSIFormat TGRSIRootIO TGRSIAnalysis  GROOT #TGRSIServer 
 ALLDIRS = $(SUBDIRS)
 
 .PHONY: subdirs $(ALLDIRS) clean
