Added a Cal Mananger - basically a map that you can put TCals into. - will be useful for macros that run over many channels - might have the ability to talk to TChannel in order to write cal files although this might be left up to the user to do

--- a/libraries/TGRSIAnalysis/TCal/makefile
+++ b/libraries/TGRSIAnalysis/TCal/makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = TCal.o TCalDict.o TEfficiencyCal.o TEfficiencyCalDict.o TEnergyCal.o TEnergyCalDict.o TGainMatch.o TGainMatchDict.o
+OBJECTS = TCal.o TCalDict.o TEfficiencyCal.o TEfficiencyCalDict.o TEnergyCal.o TEnergyCalDict.o TGainMatch.o TGainMatchDict.o TCalManager.o TCalManagerDict.o
 
 CFLAGS += -fPIC
 
