GFile skeleton classes.

--- a/libraries/GROOT/makefile
+++ b/libraries/GROOT/makefile
@@ -1,10 +1,11 @@
 
-OBJECTS = GROOTGuiFactory.o GRootCanvas.o GCanvas.o GH1D.o GROOTDict.o GTree.o GChain.o 
+OBJECTS = GROOTGuiFactory.o GRootCanvas.o GCanvas.o GH1D.o GROOTDict.o GTree.o GChain.o GFile.o
 INCDIR = $(BASE)/include
 DICTOBJ =  $(INCDIR)/GROOTGuiFactory.h 
 DICTOBJ += $(INCDIR)/GRootCanvas.h 
 DICTOBJ += $(INCDIR)/GCanvas.h 
 DICTOBJ += $(INCDIR)/GH1D.h 
+DICTOBJ += $(INCDIR)/GFile.h 
 DICTOBJ += $(INCDIR)/GTree.h 
 DICTOBJ += $(INCDIR)/GChain.h
 DICTNAM = GROOT
