added ExamineMidasFile.C util, fixed grsi-config --all-libs option

--- a/util/makefile
+++ b/util/makefile
@@ -1,5 +1,5 @@
 CXXTARGET = Root2Rad
-ROOTTARGET = MakeMatrices MakeTimeDiffSpec Make1DChargeHistograms offsetadd offsetfind offsetfindtree bufferclean
+ROOTTARGET = MakeMatrices MakeTimeDiffSpec Make1DChargeHistograms offsetadd offsetfind offsetfindtree bufferclean ExamineMidasFile
 
 
 
@@ -53,6 +53,7 @@ $(BINDIR)/%: %.C
 		else printf "\r ${COM_COLOR}%s${OBJ_COLOR}%-30s ${OK_COLOR}%*s${NO_COLOR}\n" $(COMP_STRING) $(basename $^) 10  $(OK_STRING); \
 		fi;
 	@$(RM) -f temp.errors temp.log temp.comp
+
 
 clean:
 	$(RM) $(GRSISYS)/bin/$(ROOTTARGET) $(GRSISYS)/bin/$(CXXTARGET) *~ *Dict* *so 
