--- a/libraries/GROOT/makefile
+++ b/libraries/GROOT/makefile
@@ -1,10 +1,13 @@
 
-OBJECTS = GROOTGuiFactory.o GRootCanvas.o GRootBrowser.o GCanvas.o GRootCanvasManager.o GH1D.o GROOTDict.o GTree.o GChain.o GFile.o
+OBJECTS = GROOTGuiFactory.o GRootCanvas.o GRootBrowser.o GCanvas.o GDirectory.o \
+          GRootObjectManager.o GH1D.o GROOTDict.o GTree.o GChain.o GFile.o
 INCDIR = $(BASE)/include
 DICTOBJ =  $(INCDIR)/GROOTGuiFactory.h 
 DICTOBJ += $(INCDIR)/GRootCanvas.h 
+#DICTOBJ += $(INCDIR)/GRootObjectManager.h 
 DICTOBJ += $(INCDIR)/GRootBrowser.h 
 DICTOBJ += $(INCDIR)/GCanvas.h 
+DICTOBJ += $(INCDIR)/GDirectory.h 
 DICTOBJ += $(INCDIR)/GH1D.h 
 DICTOBJ += $(INCDIR)/GFile.h 
 DICTOBJ += $(INCDIR)/GTree.h 
