Mac debug compatibility makefile change

--- a/libraries/makefile
+++ b/libraries/makefile
@@ -1,4 +1,4 @@
-SUBDIRS = TGRSIint TMidas TDataParser TGRSILoop TGRSIFormat TGRSIRootIO TGRSIAnalysis  GROOT #TGRSIServer 
+SUBDIRS = TGRSIint TMidas TDataParser TGRSILoop TGRSIFormat TGRSIRootIO TGRSIAnalysis GROOT #TGRSIServer 
 ALLDIRS = $(SUBDIRS)
 
 .PHONY: subdirs $(ALLDIRS) clean
@@ -9,6 +9,7 @@ $(ALLDIRS):
 
 clean:
 	@$(RM) *a *so *~ .nsf*
+	@$(RM) -r *.dSYM
 	@for dir in $(ALLDIRS); do \
 		$(MAKE) -C $$dir $@; \
 	done
