TTip added to detector class, TTigress buffer->Charge overflow bug fixed.

--- a/src/makefile
+++ b/src/makefile
@@ -51,7 +51,7 @@ DETLIBS += -lTriFoil
 DETLIBS += -lCSM
 #DETLIBS += -lSpice
 #DETLIBS += -lS3
-#DETLIBS += -lTip
+DETLIBS += -lTip
 
 DETLIBS += -lGriffin
 DETLIBS += -lSceptar
