--- a/src/makefile
+++ b/src/makefile
@@ -54,7 +54,7 @@ DETLIBS =  -lTigress
 #DETLIBS += -lTip
 
 DETLIBS += -lGriffin
-#DETLIBS += -lSceptar
+DETLIBS += -lSceptar
 #DETLIBS += -lPaces
 #DETLIBS += -lDante
 #DETLIBS += -lZeroDegree
