--- a/util/makefile
+++ b/util/makefile
@@ -48,7 +48,7 @@ CAT=cat
 
 .PHONY: all clean gone end
 
-UTILFLAGS = $(LIBDIR) -lAnalysisTreeBuilder -lGriffin -lSceptar -lDescant -lPaces -lGRSIDetector -lTGRSIFit -lTigress -lSharc -lCSM -lTriFoil -lTGRSIint -lGRSILoop -lMidasFormat -lGRSIRootIO -lDataParser -lGRSIFormat -lMidasFormat -lXMLParser -lXMLIO -lProof -lGuiHtml `grsi-config --cflags --libs` -lTreePlayer -lGROOT -lX11 -lXpm -lSpectrum
+UTILFLAGS = $(LIBDIR) `grsi-config --cflags --all-libs --root` -lTreePlayer -lGROOT -lX11 -lXpm -lSpectrum -lProof -lGuiHtml 
 
 
 UTIL_STRING = "Finished compiling utilities"
