Added Descant to leangrsi - Refactored a couple more functions in TGRSIDetectorHit   - Notably, I moved compare energy into TGRSIDetector as GetEnergy is now a base method

--- a/libraries/TGRSIAnalysis/makefile
+++ b/libraries/TGRSIAnalysis/makefile
@@ -1,4 +1,4 @@
-SUBDIRS = TGRSIDetector TGriffin TSceptar #TTip TTigress  TSharc TTriFoil TPaces TDescant TCSM 
+SUBDIRS = TGRSIDetector TGriffin TSceptar TDescant #TTip TTigress  TSharc TTriFoil TPaces TCSM 
 SUBDIRS += TNucleus TKinematics TSRIM TBetaDecay TAnalysisTreeBuilder TCal TGRSIFit
 ALLDIRS = $(SUBDIRS)
 
