--- a/src/makefile
+++ b/src/makefile
@@ -55,7 +55,7 @@ LIBS += -lTGRSIFit
 
 DETLIBS += -lGriffin
 DETLIBS += -lSceptar
-#DETLIBS += -lPaces
+DETLIBS += -lPaces
 ##DETLIBS += -lDante
 ##DETLIBS += -lZeroDegree
 DETLIBS += -lDescant
